# FlightTracker

./: .gitignore  CMakeLists.txt  FlightTracker.cpp  TestData.h  YAHAL_import.cmake
ESP8266/: CMakeLists.txt  WiFiBoard.cpp
FlightData/: Airline.h  DateTime.h  Flight.h  FlightTime.h  SpecificFlight.h
FlightData/Airport/: AirportData.h
RP2350/: CMakeLists.txt  FlightTracker.cpp
RP2350/FlightData/: AircraftModel.h  FlightHistory.h  FlightTrackPoint.h
RP2350/FlightData/Airport/: AirportCode.h  AirportPosition.h
RP2350/include/: Button.h  JSONConverter.h  List.h  Timer.h
RP2350/lib/: Drawer.cpp  Joystick.cpp
include/: API.h  Drawer.h  Flight.h  FlightTimeConverter.h  JSONConverter.h  Joystick.h  List.h  Log.h  MeasurementsConverter.h
lib/: Drawer.cpp  Joystick.cpp
